--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3979,19 +3979,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting notebook_demo.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile notebook_demo.py\n",
     "import wx\n",
     "from example import ExamplePanel\n",
     "\n",
     "app = wx.App(False)\n",
-    "frame = wx.Frame(None, title=\"Demo with Note\")"
+    "frame = wx.Frame(None, title=\"Demo with Notebook\", size=(600,500))\n",
+    "nb = wx.Notebook(frame)\n",
+    "\n",
+    "nb.AddPage(ExamplePanel(nb), \"Absolute Positioning\")\n",
+    "nb.AddPage(ExamplePanel(nb), \"Page Two\")\n",
+    "nb.AddPage(ExamplePanel(nb), \"Page Three\")\n",
+    "frame.Show()\n",
+    "app.MainLoop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw notebook_demo.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Improving our window\n",
+    "- we will add more features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting example.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile example.py\n",
+    "import wx\n",
+    "import os\n",
+    "class ExamplePanel (wx.Panel):\n",
+    "    def __init__(self, parent):\n",
+    "        wx.Panel.__init__(self,parent)\n",
+    "        \n",
+    "        # create some sizers\n",
+    "        # NEW CODE:\n",
+    "        mainSizer = wx.BoxSizer(wx.VERTICAL)\n",
+    "        grid = wx. GridBagSizer(hgap=5, vgap=5)\n",
+    "        hSizer = wx.BoxSizer(wx.HORIZONTAL)\n",
+    "        \n",
+    "        self.quote= wx.StaticText(self, label=\"Your Quote :\")\n",
+    "        grid.Add(self.quote, pos(0,0))  #NEW LINE\n",
+    "        \n",
+    "        # A multiline textctrl - this is here to show how the events work\n",
+    "        self.logger = wx.TextCtrl(self, size=(200,300), style=wx.TE_MULTILINE | wx.TE_READONLY)\n",
+    "\n",
+    "        # A button\n",
+    "        self.button = wx.Button(self, label=\"Save\")\n",
+    "        grid.Add(self.button, pos(0,1))\n",
+    "        self.Bind(wx.EVT_BUTTON, self.OnClick,self.button)\n",
+    "\n",
+    "        # the edit control - one line version\n",
+    "        self.lblname = wx.StaticText(self, label=\"Your name :\")\n",
+    "        grid.Add(self.lblname, pos(1,0))\n",
+    "        self.editname = wx.TextCtrl(self, value=\"Enter here your name\", size=(140,-1))\n",
+    "        grid.Add(self.editname, pos(1,1))\n",
+    "        self.Bind(wx.EVT_TEXT,self.EvtText,self.editname)\n",
+    "        self.Bind(wx.EVT_CHAR,self.EvtChar,self.editname)\n",
+    "\n",
+    "        # the combobox Control\n",
+    "        self.sampleList = ['friends', 'advertising', 'web search', 'Yellow Pages']\n",
+    "        self.lblhear = wx.StaticText(self, label=\"How did you hear from us?\")\n",
+    "        grid.Add(self.lblhear, pos(3,0))\n",
+    "        self.edithear = wx.ComboBox(self, size=(95,-1),choices=self.sampleList, style=wx.CB_DROPDOWN)\n",
+    "        grid.Add(self.edithear, pos(3,1))\n",
+    "        self.Bind(wx.EVT_COMBOBOX,self.EvtComboBox,self.edithear)\n",
+    "        self.Bind(wx.EVT_TEXT,self.EvtText,self.edithear)\n",
+    "        \n",
+    "        # add a spacer to the sizer\n",
+    "        grid.Add((10,40), pos=(2,0))   # NEW LINE\n",
+    "\n",
+    "        # check box\n",
+    "        self.insure=wx.CheckBox(self,label=\"Do you want Insured Shipment?\")\n",
+    "        grid.Add(self.insure, pos(4,0), span=(1,2), flag=wx.BOTTOM, border=5) # NEW LINE\n",
+    "        self.Bind(wx.EVT_CHECKBOX,self.EvtCheckBox,self.insure)\n",
+    "\n",
+    "        # Radio Boxes\n",
+    "        radioList = ['blue','red','yellow','orange','green','purple','navy blue','black','gray']\n",
+    "        rb = wx.RadioBox(self,label=\"What color whould you like?\", choices=radioList, majorDimension=3,style=wx.RA_SPECIFY_COLS)\n",
+    "        grid.Add(rb, pos(5,0), span=(1,2)) #NEW LINE\n",
+    "        self.Bind(wx.EVT_RADIOBOX,self.EvtRadioBox,rb)\n",
+    "        \n",
+    "        # NEW CODE\n",
+    "        hSizer.Add(grid, 0, wx.ALL, 5)\n",
+    "        hSizer.Add(self.logger)\n",
+    "        mainSizer.Add(hSizer, 0, wx.All, 5)\n",
+    "        mainSizer.Add(self.button, 0 , wx.CENTER)\n",
+    "        self.SetSizerAndFit(mainSizer)\n",
+    "        \n",
+    "    \n",
+    "    def EvtRadioBox(self,event):\n",
+    "        self.logger.AppendText('EvtRadioBox: %d\\n' % event.GetInt())\n",
+    "    def EvtComboBox(self,event):\n",
+    "        self.logger.AppendText('EvtComboBox %s/n' % event.GetString())\n",
+    "    def OnClick(self,event):\n",
+    "        self.logger.AppendText('Click on an object with ID %d\\n' % event.GetId())\n",
+    "    def EvtText(self,event):\n",
+    "        self.logger.AppendText('EvtText: %s\\n' % event.GetString())\n",
+    "    def EvtChar(self,event):\n",
+    "        self.logger.AppendText('EvtChar: %d\\n' % event.GetKeyCode())\n",
+    "    def EvtCheckBox(self,event):\n",
+    "        self.logger.AppendText('EvtCheckBox: %d\\n' % event.Checked())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\r\n",
+      "  File \"control_demo.py\", line 6, in <module>\r\n",
+      "    panel = ExamplePanel(frame)\r\n",
+      "  File \"/Users/jarredgreen/Dropbox/Astromundus/Innsbruck/Programming/JarredsNotes/example.py\", line 14, in __init__\r\n",
+      "    grid.Add(self.quote, pos(0,0))  #NEW LINE\r\n",
+      "NameError: global name 'pos' is not defined\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pythonw control_demo.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
