--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3862,8 +3862,9 @@
     "# Lecture 7 — More Widgets\n",
     "\n",
     "Todo\n",
-    "1. \n",
-    "\n",
+    "1. A multi-featured widget\n",
+    "2. Notebook Demo\n",
+    "3. Adding a grid\n",
     "\n",
     "## 1. A multi-featured widget"
    ]
@@ -4023,13 +4024,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Improving our window\n",
-    "- we will add more features"
+    "## 3. Adding a grid\n",
+    "- we will add a grid so all the things line up nicely"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -4057,30 +4058,30 @@
     "        hSizer = wx.BoxSizer(wx.HORIZONTAL)\n",
     "        \n",
     "        self.quote= wx.StaticText(self, label=\"Your Quote :\")\n",
-    "        grid.Add(self.quote, pos(0,0))  #NEW LINE\n",
+    "        grid.Add(self.quote, pos=(0,0))  #NEW LINE\n",
     "        \n",
     "        # A multiline textctrl - this is here to show how the events work\n",
     "        self.logger = wx.TextCtrl(self, size=(200,300), style=wx.TE_MULTILINE | wx.TE_READONLY)\n",
     "\n",
     "        # A button\n",
     "        self.button = wx.Button(self, label=\"Save\")\n",
-    "        grid.Add(self.button, pos(0,1))\n",
+    "        grid.Add(self.button, pos=(0,1))\n",
     "        self.Bind(wx.EVT_BUTTON, self.OnClick,self.button)\n",
     "\n",
     "        # the edit control - one line version\n",
     "        self.lblname = wx.StaticText(self, label=\"Your name :\")\n",
-    "        grid.Add(self.lblname, pos(1,0))\n",
+    "        grid.Add(self.lblname, pos=(1,0))\n",
     "        self.editname = wx.TextCtrl(self, value=\"Enter here your name\", size=(140,-1))\n",
-    "        grid.Add(self.editname, pos(1,1))\n",
+    "        grid.Add(self.editname, pos=(1,1))\n",
     "        self.Bind(wx.EVT_TEXT,self.EvtText,self.editname)\n",
     "        self.Bind(wx.EVT_CHAR,self.EvtChar,self.editname)\n",
     "\n",
     "        # the combobox Control\n",
     "        self.sampleList = ['friends', 'advertising', 'web search', 'Yellow Pages']\n",
     "        self.lblhear = wx.StaticText(self, label=\"How did you hear from us?\")\n",
-    "        grid.Add(self.lblhear, pos(3,0))\n",
+    "        grid.Add(self.lblhear, pos=(3,0))\n",
     "        self.edithear = wx.ComboBox(self, size=(95,-1),choices=self.sampleList, style=wx.CB_DROPDOWN)\n",
-    "        grid.Add(self.edithear, pos(3,1))\n",
+    "        grid.Add(self.edithear, pos=(3,1))\n",
     "        self.Bind(wx.EVT_COMBOBOX,self.EvtComboBox,self.edithear)\n",
     "        self.Bind(wx.EVT_TEXT,self.EvtText,self.edithear)\n",
     "        \n",
@@ -4089,19 +4090,19 @@
     "\n",
     "        # check box\n",
     "        self.insure=wx.CheckBox(self,label=\"Do you want Insured Shipment?\")\n",
-    "        grid.Add(self.insure, pos(4,0), span=(1,2), flag=wx.BOTTOM, border=5) # NEW LINE\n",
+    "        grid.Add(self.insure, pos=(4,0), span=(1,2), flag=wx.BOTTOM, border=5) # NEW LINE\n",
     "        self.Bind(wx.EVT_CHECKBOX,self.EvtCheckBox,self.insure)\n",
     "\n",
     "        # Radio Boxes\n",
     "        radioList = ['blue','red','yellow','orange','green','purple','navy blue','black','gray']\n",
     "        rb = wx.RadioBox(self,label=\"What color whould you like?\", choices=radioList, majorDimension=3,style=wx.RA_SPECIFY_COLS)\n",
-    "        grid.Add(rb, pos(5,0), span=(1,2)) #NEW LINE\n",
+    "        grid.Add(rb, pos=(5,0), span=(1,2)) #NEW LINE\n",
     "        self.Bind(wx.EVT_RADIOBOX,self.EvtRadioBox,rb)\n",
     "        \n",
     "        # NEW CODE\n",
     "        hSizer.Add(grid, 0, wx.ALL, 5)\n",
     "        hSizer.Add(self.logger)\n",
-    "        mainSizer.Add(hSizer, 0, wx.All, 5)\n",
+    "        mainSizer.Add(hSizer, 0, wx.ALL, 5)\n",
     "        mainSizer.Add(self.button, 0 , wx.CENTER)\n",
     "        self.SetSizerAndFit(mainSizer)\n",
     "        \n",
@@ -4122,7 +4123,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!pythonw control_demo.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Adding images\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting mpl_demo.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile mpl_demo.py\n",
+    "#!/usr/bin/env python\n",
+    "\n",
+    "from numpy import arange, sin, pi\n",
+    "from matplotlib.backends.backend_wxagg import FigureCanvasWxAgg as FigureCanvas\n",
+    "from matplotlib.figure import Figure\n",
+    "import wx\n",
+    "\n",
+    "class CanvasFrame(wx.Frame):\n",
+    "    def __init__(self):\n",
+    "        wx.Frame.__init__(self, None, -1, 'CanvasFrame', size(550, 350))\n",
+    "        \n",
+    "        self.figure = Figure()\n",
+    "        self.axes = self.figure.add_subplot(111)\n",
+    "        t = arrange(0.0, 3.0, 0.01)\n",
+    "        s = sin(2 * pi * t)\n",
+    "        \n",
+    "        self.axes.plot(t , s)\n",
+    "        self.canvas = FigureCanvas(self, -1, self.figure)\n",
+    "        \n",
+    "        self.sizer = wx.BoxSizer(wx.VERTICAL)\n",
+    "        self.sizer.Add(self.canvas, 1, wx.LEFT | wx.TOP | wx.EXPAND)\n",
+    "        self.SetSizer(self.sizer)\n",
+    "        self.Fit()\n",
+    "        \n",
+    "class App(wx.App):\n",
+    "    def OnInit(self):\n",
+    "        'Create the main window and insert the custom frame'\n",
+    "        frame = CanvasFrame()\n",
+    "        frame.Show(True)\n",
+    "        return True\n",
+    "        \n",
+    "app = App(0)\n",
+    "app.MainLoop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -4132,16 +4203,22 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\r\n",
-      "  File \"control_demo.py\", line 6, in <module>\r\n",
-      "    panel = ExamplePanel(frame)\r\n",
-      "  File \"/Users/jarredgreen/Dropbox/Astromundus/Innsbruck/Programming/JarredsNotes/example.py\", line 14, in __init__\r\n",
-      "    grid.Add(self.quote, pos(0,0))  #NEW LINE\r\n",
-      "NameError: global name 'pos' is not defined\r\n"
+      "  File \"mpl_demo.py\", line 32, in <module>\r\n",
+      "    app = App(0)\r\n",
+      "  File \"/Users/jarredgreen/anaconda/lib/python2.7/site-packages/wx-3.0-osx_cocoa/wx/_core.py\", line 8631, in __init__\r\n",
+      "    self._BootstrapApp()\r\n",
+      "  File \"/Users/jarredgreen/anaconda/lib/python2.7/site-packages/wx-3.0-osx_cocoa/wx/_core.py\", line 8196, in _BootstrapApp\r\n",
+      "    return _core_.PyApp__BootstrapApp(*args, **kwargs)\r\n",
+      "  File \"mpl_demo.py\", line 28, in OnInit\r\n",
+      "    frame = CanvasFrame()\r\n",
+      "  File \"mpl_demo.py\", line 10, in __init__\r\n",
+      "    wx.Frame.__init__(self, None, -1, 'CanvasFrame', size(550, 350))\r\n",
+      "NameError: global name 'size' is not defined\r\n"
      ]
     }
    ],
    "source": [
-    "!pythonw control_demo.py"
+    "!pythonw mpl_demo.py"
    ]
   },
   {
