--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -4030,7 +4030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -4123,7 +4123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -4141,7 +4141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -4157,6 +4157,8 @@
    "source": [
     "%%writefile mpl_demo.py\n",
     "#!/usr/bin/env python\n",
+    "#import wxversion\n",
+    "#wxversion.ensureMinimal('2.8')\n",
     "\n",
     "from numpy import arange, sin, pi\n",
     "from matplotlib.backends.backend_wxagg import FigureCanvasWxAgg as FigureCanvas\n",
@@ -4165,58 +4167,40 @@
     "\n",
     "class CanvasFrame(wx.Frame):\n",
     "    def __init__(self):\n",
-    "        wx.Frame.__init__(self, None, -1, 'CanvasFrame', size(550, 350))\n",
-    "        \n",
+    "        wx.Frame.__init__(self, None, -1,\n",
+    "                          'CanvasFrame', size=(550, 350))\n",
+    "\n",
     "        self.figure = Figure()\n",
     "        self.axes = self.figure.add_subplot(111)\n",
-    "        t = arrange(0.0, 3.0, 0.01)\n",
+    "        t = arange(0.0, 3.0, 0.01)\n",
     "        s = sin(2 * pi * t)\n",
-    "        \n",
-    "        self.axes.plot(t , s)\n",
+    "\n",
+    "        self.axes.plot(t, s)\n",
     "        self.canvas = FigureCanvas(self, -1, self.figure)\n",
-    "        \n",
+    "\n",
     "        self.sizer = wx.BoxSizer(wx.VERTICAL)\n",
     "        self.sizer.Add(self.canvas, 1, wx.LEFT | wx.TOP | wx.EXPAND)\n",
     "        self.SetSizer(self.sizer)\n",
     "        self.Fit()\n",
-    "        \n",
+    "\n",
     "class App(wx.App):\n",
     "    def OnInit(self):\n",
     "        'Create the main window and insert the custom frame'\n",
     "        frame = CanvasFrame()\n",
     "        frame.Show(True)\n",
     "        return True\n",
-    "        \n",
+    "\n",
     "app = App(0)\n",
     "app.MainLoop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"mpl_demo.py\", line 32, in <module>\r\n",
-      "    app = App(0)\r\n",
-      "  File \"/Users/jarredgreen/anaconda/lib/python2.7/site-packages/wx-3.0-osx_cocoa/wx/_core.py\", line 8631, in __init__\r\n",
-      "    self._BootstrapApp()\r\n",
-      "  File \"/Users/jarredgreen/anaconda/lib/python2.7/site-packages/wx-3.0-osx_cocoa/wx/_core.py\", line 8196, in _BootstrapApp\r\n",
-      "    return _core_.PyApp__BootstrapApp(*args, **kwargs)\r\n",
-      "  File \"mpl_demo.py\", line 28, in OnInit\r\n",
-      "    frame = CanvasFrame()\r\n",
-      "  File \"mpl_demo.py\", line 10, in __init__\r\n",
-      "    wx.Frame.__init__(self, None, -1, 'CanvasFrame', size(550, 350))\r\n",
-      "NameError: global name 'size' is not defined\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pythonw mpl_demo.py"
    ]
