--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -4225,7 +4225,7 @@
    "source": [
     "-------\n",
     "\n",
-    "# Lecture 8 — Intro to Astro Py\n",
+    "# Lecture 8 — Intro to astropy\n",
     "### January 16, 2017 (Morning)\n",
     "\n",
     "Todo\n",
@@ -4234,7 +4234,8 @@
     "3. opening FITS files in a more general way\n",
     "4. coordinate transformations\n",
     "5. cutouts\n",
-    "6. saving a FITS files"
+    "6. saving a FITS files\n",
+    "7. tables in astropy"
    ]
   },
   {
@@ -4680,6 +4681,152 @@
     "primaryhdu = fits.PrimaryHDU(cutout.data, cheader)\n",
     "hdulist = fits.HDUList([primaryhdu])\n",
     "hdulist.writeto('horse.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Tables in astropy\n",
+    "\n",
+    "- You can also use the FITS interface to open tables\n",
+    "\n",
+    "```python\n",
+    "from astropy.table import Table\n",
+    "#getting the first table\n",
+    "t1 = Table.read(filename.fits)\n",
+    "```\n",
+    "\n",
+    "- if you go back and look at the log for the horsehead file, yo ucan see that we also have a table in extension 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'DEGREES' did not parse as fits unit: At col 0, Unit 'DEGREES' not supported by the FITS standard.  [astropy.units.core]\n",
+      "WARNING: UnitsWarning: 'ARCSEC' did not parse as fits unit: At col 0, Unit 'ARCSEC' not supported by the FITS standard. Did you mean arcsec? [astropy.units.core]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=10&gt;\n",
+       "<table id=\"table4364850384-901110\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>XI</th><th>ETA</th><th>XI_CORR</th><th>ETA_CORR</th></tr></thead>\n",
+       "<thead><tr><th></th><th>DEGREES</th><th>DEGREES</th><th>ARCSEC</th><th>ARCSEC</th></tr></thead>\n",
+       "<tr><td>0</td><td>-3.12</td><td>-3.12</td><td>0.09</td><td>0.04</td></tr>\n",
+       "<tr><td>1</td><td>-2.96</td><td>-3.12</td><td>0.02</td><td>0.07</td></tr>\n",
+       "<tr><td>2</td><td>-2.8</td><td>-3.12</td><td>-0.07</td><td>0.15</td></tr>\n",
+       "<tr><td>3</td><td>-2.64</td><td>-3.12</td><td>-0.17</td><td>0.25</td></tr>\n",
+       "<tr><td>4</td><td>-2.48</td><td>-3.12</td><td>-0.29</td><td>0.26</td></tr>\n",
+       "<tr><td>5</td><td>-2.32</td><td>-3.12</td><td>-0.38</td><td>0.25</td></tr>\n",
+       "<tr><td>6</td><td>-2.16</td><td>-3.12</td><td>-0.42</td><td>0.15</td></tr>\n",
+       "<tr><td>7</td><td>-2.0</td><td>-3.12</td><td>-0.48</td><td>0.06</td></tr>\n",
+       "<tr><td>8</td><td>-1.84</td><td>-3.12</td><td>-0.47</td><td>-0.01</td></tr>\n",
+       "<tr><td>9</td><td>-1.68</td><td>-3.12</td><td>-0.47</td><td>-0.12</td></tr>\n",
+       "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
+       ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
+       "display: inline-block; margin-right: 1em; }\n",
+       ".paginate_button { margin-right: 5px; }\n",
+       "</style>\n",
+       "<script>\n",
+       "require.config({paths: {\n",
+       "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
+       "}});\n",
+       "require([\"datatables\"], function(){\n",
+       "    console.log(\"$('#table4364850384-901110').dataTable()\");\n",
+       "    $('#table4364850384-901110').dataTable({\n",
+       "        \"order\": [],\n",
+       "        \"iDisplayLength\": 50,\n",
+       "        \"aLengthMenu\": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
+       "        \"pagingType\": \"full_numbers\"\n",
+       "    });\n",
+       "});\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from astropy.table import Table\n",
+    "t = Table.read(image_file, hdu=1)\n",
+    "t[:10].show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   XI     ETA   XI_CORR ETA_CORR\n",
+      "DEGREES DEGREES  ARCSEC  ARCSEC \n",
+      "------- ------- ------- --------\n",
+      "  -3.12   -3.12    0.09     0.04\n",
+      "  -2.96   -3.12    0.02     0.07\n",
+      "   -2.8   -3.12   -0.07     0.15\n",
+      "  -2.64   -3.12   -0.17     0.25\n",
+      "  -2.48   -3.12   -0.29     0.26\n",
+      "  -2.32   -3.12   -0.38     0.25\n",
+      "  -2.16   -3.12   -0.42     0.15\n",
+      "   -2.0   -3.12   -0.48     0.06\n",
+      "  -1.84   -3.12   -0.47    -0.01\n",
+      "  -1.68   -3.12   -0.47    -0.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# you can also just print the table\n",
+    "\n",
+    "from astropy.table import Table\n",
+    "t = Table.read(image_file, hdu=1)\n",
+    "print(t[:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- a table is bot ha dictionary and numpy arry like datatype that can be acceped by a key (for columns) or index (for rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-55-c23179898edb>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-55-c23179898edb>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    e.g.\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# e.g.\n"
    ]
   },
   {
