--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -3594,7 +3594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -3603,7 +3603,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MenuActions.py\n"
+      "Writing MenuActions.py\n"
      ]
     }
    ],
@@ -3629,7 +3629,7 @@
     "            \n",
     "            # Creating the menubar\n",
     "            menuBar = wx.MenuBar()\n",
-    "            menuBar.Append(filemenu, \"&File\") # adding the \"filename\" to the...\n",
+    "             z\n",
     "            self.SetMenuBar(menuBar) # Adding the MenuBar for the Frame content\n",
     "            \n",
     "            #New code beings here:\n",
@@ -3656,7 +3656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -3780,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -3789,7 +3789,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MenuButtons.py\n"
+      "Writing MenuButtons.py\n"
      ]
     }
    ],
@@ -3872,7 +3872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
@@ -3907,7 +3907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -3916,7 +3916,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting example.py\n"
+      "Writing example.py\n"
      ]
     }
    ],
@@ -3971,7 +3971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -3980,7 +3980,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting control_demo.py\n"
+      "Writing control_demo.py\n"
      ]
     }
    ],
@@ -3998,7 +3998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -4066,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -4090,7 +4090,7 @@
     "        # create some sizers\n",
     "        # NEW CODE:\n",
     "        mainSizer = wx.BoxSizer(wx.VERTICAL)\n",
-    "        grid = wx. GridBagSizer(hgap=5, vgap=5)\n",
+    "        grid = wx.GridBagSizer(hgap=5, vgap=5)\n",
     "        hSizer = wx.BoxSizer(wx.HORIZONTAL)\n",
     "        \n",
     "        self.quote= wx.StaticText(self, label=\"Your Quote :\")\n",
@@ -4159,7 +4159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -6587,6 +6587,547 @@
    "source": [
     "M[1,:] = 4.4\n",
     "print M"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "-------\n",
+    "\n",
+    "# Lecture 11 — more numpy\n",
+    "### January 18, 2017 (Morning)\n",
+    "\n",
+    "Todo\n",
+    "  1. project outline\n",
+    "  2. numpy continued\n",
+    "  3. linear algebra\n",
+    "  \n",
+    "## 1. Project outline\n",
+    "- see the guide for the final project here \n",
+    "  - https://github.com/darioflute/CS4A/blob/master/Project-requirements.ipynb\n",
+    "  \n",
+    "## 2. numpy continued\n",
+    "\n",
+    "### numpy arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "A = np.array([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calls the last element\n",
+    "A[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [20, 21, 22, 23, 24],\n",
+       "       [30, 31, 32, 33, 34],\n",
+       "       [40, 41, 42, 43, 44]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# you can also define an array in a loop with \n",
+    "\n",
+    "A = np.array([[n+m*10 for n in range(5)] for m in range(5)])\n",
+    "\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4],\n",
+       "       [20, 22, 24],\n",
+       "       [40, 42, 44]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a block from the original array\n",
+    "A[::2, ::2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fancy indexing\n",
+    "\n",
+    "- fancy indexing is the name for when an array or list is used in place of an index:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 11, 12, 13, 14],\n",
+       "       [20, 21, 22, 23, 24],\n",
+       "       [30, 31, 32, 33, 34]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_indicies = [1,2,3]\n",
+    "A[row_indicies]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 22, 34])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_indicies = [1,2,-1] # remember, index -1 is the last element\n",
+    "A[row_indicies, col_indicies]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- we can also use index masks: \n",
+    "    - a numpy array of data type ```bool```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = np.array([n for n in range(5)])\n",
+    "B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Masks\n",
+    "- like where but much faster!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_mask = np.array([True, False, True, False, False])\n",
+    "B[row_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# same thing as above \n",
+    "row_mask = np.array([1,0,1,0,0], dtype=bool)\n",
+    "B[row_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  0.5,  1. ,  1.5,  2. ,  2.5,  3. ,  3.5,  4. ,  4.5,  5. ,\n",
+       "        5.5,  6. ,  6.5,  7. ,  7.5,  8. ,  8.5,  9. ,  9.5])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# example with comparison operators\n",
+    "x = np.arange(0,10,0.5)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False, False,  True,  True,  True,  True, False, False, False,\n",
+       "       False, False], dtype=bool)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (5 < x) * (x < 7.5)\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5.5,  6. ,  6.5,  7. ])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[mask]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### where\n",
+    "- the index mask can be converted to position \n",
+    "\n",
+    "- copy notes later ***\n",
+    "\n",
+    "### diags\n",
+    "\n",
+    "\n",
+    "### take\n",
+    "\n",
+    "### choose\n",
+    "- constructs an array by picking elements from several arrays:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Linear Algebra\n",
+    "- vectorizing code is key!\n",
+    "- as much as possible a program should be formulated in terms of matricies\n",
+    "\n",
+    "### Scalar operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 = np.arange(5)\n",
+    "v1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  4,  9, 16])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 * v1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.arange(5)+3\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(v1,v1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]]\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.matrix(v1)\n",
+    "v = np.matrix(v1).T\n",
+    "\n",
+    "print M\n",
+    "print v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n = np.matrix([1,2,3,4,5,6]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array / Matrix Transformations\n",
+    "\n",
+    "*copy notes..... later*\n",
+    "\n",
+    "### Matrix Computations\n",
+    "- let's explore the linear algabra (linalg) methods:\n",
+    "#### Determinants\n",
+    "\n",
+    "### Data Processing\n",
+    "- mean\n",
+    "- standard dev, var\n",
+    "- min / max\n",
+    "- sum, prod, trace\n",
+    "- cumsum, cumprod\n",
+    "- max vs nanmax vs argmax ?\n",
+    "\n",
+    "### Computations of array subsets\n",
+    "- ```np.unique(data)``` grabs only unique values from a dataset\n",
+    "\n",
+    "### Calculations with higher-dimensional data\n",
+    "\n",
+    "### Iterating over array elements\n",
+    "\n",
+    "- oh my god that was too fast\n",
+    "- I'll link the notes later..."
    ]
   },
   {
