--- a/Lecture_Notes.ipynb
+++ b/Lecture_Notes.ipynb
@@ -78,6 +78,12 @@
     "    7. numpy native format .npy\n",
     "    8. more numpy features\n",
     "    9. manipulating arrays\n",
+    "  ### Lecture 11 — More numpy\n",
+    "    1. project outline\n",
+    "    2. numpy continued\n",
+    "    3. linear algebra\n",
+    "  ### Lecture 12 — Packaging in python\n",
+    "    1. Packaging\n",
     "    \n",
     "    \n",
     "--------"
@@ -7127,7 +7133,52 @@
     "### Iterating over array elements\n",
     "\n",
     "- oh my god that was too fast\n",
-    "- I'll link the notes later..."
+    "- I'll link the notes later...\n",
+    "\n",
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Lecture 12 — Packaging in python\n",
+    "### January 18, 2017 (Afternoon)\n",
+    "\n",
+    "Todo\n",
+    "  1. Packaging\n",
+    "\n",
+    "  \n",
+    "## 1. Packaging\n",
+    "** Dario's full instructions:\n",
+    "https://github.com/darioflute/CS4A/blob/master/Lecture-packaging.ipynb**\n",
+    "\n",
+    "### Picking a name\n",
+    "  - all lowercase, no symbols\n",
+    "### .gitignore\n",
+    "  - add files to this list that should not go onto git\n",
+    "  - eg ```*.ipynb**``` or ```*.pyc*```\n",
+    "### README\n",
+    "  - all the basic information and instructions\n",
+    "### setup.py\n",
+    "  - You must have this file apparently\n",
+    "### conda files\n",
+    "  - for conda you need a few other things\n",
+    "  - you need a meta\n",
+    "  - ```build.sh``` and ```build.bat``` for windows and UNIX\n",
+    "  - upload to git repository and do a release\n",
+    "### now you can do a local conda package\n",
+    "  - install-conda build\n",
+    "  - upgrade conda and conda-build\n",
+    "  - ```conda build yourpackage```\n",
+    "  - create an anaconda account\n",
+    "  - upload your package\n",
+    "  - check if it's there\n",
+    "    - ```anaconda search -t conda yourpackage```\n",
+    "  - install it\n",
+    "    - ```conda install -c yourchannel yourpackage```\n"
    ]
   },
   {
